--- a/index.html
+++ b/index.html
@@ -6,28 +6,51 @@
     <body>
         <header class="navigation">
             <div class="logo inline-block">
-                <img logo src="images/simrat logo.png">
-                <p>Simrat Kaur Puri</p>
-                <p>UI/UX Designer</p>
+                <img class="logoImg"src="images/simrat logo.png">
+                <p>Simrat Kaur Puri UI/UX Designer</p>
              <div class="topnav">
                  <a class="contact">Contact</a>
                  <a class="resume">Resume</a>
-                 <a class="projects">Projects</a>
-                 <a class="about active">About</a>
-             </div>
+                 <a class="projects active">Projects</a>
+                 <a class="about">About</a>
+                </div>
             </div>
         </header>
-            <section class="heroImg">
-                <div class="content">
-                    <img class="pic"src="images/simrat.jpeg">
-                    <div class="para">
-                    <h1>Hello, I'm Simrat</h1>
-                    <h2>A Bit About Me</h2>
-                    <p>Solutions-savvy UX/UI Designer combining creativity and usability viewpoints to design web and mobile applications. Thrives on creating compelling user experiences to improve brand loyalty, customer retention, and visit-to-order ratios. </p>
-                    <button>Checkout my work</button>
+        <h1>Projects</h1>
+            <section class="perfectlyCenter alignItems flexContainer">
+                <div class="flexItem">
+                    <img src="images/TripHop display.png" alt="tripHop">
+                    <h2>Mobile App Case Study</h2>
+                    <h3>TripHop App</h3>
+                    <p1>THE PROBLEM: 
+                        Travellers these days do a lot of research while planning their itinerary. They have a hard time collating ratings and reviews over various websites/apps.
+                        
+                        THE SOLUTION: 
+                        To provide an app where users can see all the required information at a glance for their ease in comparison.
+                    </p1>
+                    <button>View Project</button>
                 </div>
-
+                <div class="flexItem">
+                    <img src="images/canada post display.png" alt="canada post">
+                    <h2>Government Agency UI Redesign</h2>
+                    <h3>Canada Post Case Study</h3>
+                    <p1>
+                        For this project we closely studied the UI Elements of the present Canada Post website and mobile app.
+                        We conducted the heuristic evaluation of the website and also analysed its navigation. We also did the card sorting before redesigning the user interface.
+                    </p1>
+                    <button>View Project</button>
                 </div>
+                <div class="flexItem">
+                    <img src="images/khyber display.png" alt="khyber">
+                    <h2>Non-Profit Agency Website Redesign</h2>
+                    <h3>Khyber Case Stydy</h3>
+                    <p1>
+                        THE PROBLEM: Users struggle with information overload and the inability to find what they need, leaving them frustrated and intimidated.
+                        THE SOLUTION: To redesign the website in an aesthetically pleasing and user friendly manner. 
+                    </p1>
+                    <button>View Project</button>
+                </div>
+                
             </section>
                 <footer>
                     <ul class="navFoot">
