--- a/index.html
+++ b/index.html
@@ -52,6 +52,28 @@
                 </div>
                 
             </section>
+            <section class="mySkills">
+                <h1>My UX Skills</h1>
+                <div class="skillsGrid grid-container">
+                    <div class="userResearch">
+                        <img src="images/user research.png">
+                        <h4>User Research</h4>
+                        <p2>User research focuses on understanding user behaviors, needs, and motivations through interviews, surveys, usability evaluations and other forms of feedback methodologies. It is used to understand how people interact with products and evaluate whether design solutions meet their needs.</p2>
+                    </div>
+                    <div class="userInterface">
+                        <img src="images/UI design.png">
+                        <h4>User Interface Design</h4>
+                        <p2>User interface design or user interface engineering is the design of user interfaces for machines and software, such as computers, home appliances, mobile devices, and other electronic devices, with the focus on maximizing usability and the user experience</p2>
+                    </div>
+                    <div class="webDevelopment">
+                        <img src="images/web development.jpeg">
+                        <h4>Web Development</h4>
+                        <p2>Web development is the work involved in developing a website for the Internet or an intranet. Web development can range from developing a simple single static page of plain text to complex web applications, electronic businesses, and social network services.</p2>
+                    </div>
+
+                </div>
+                
+            </section>
                 <footer>
                     <ul class="navFoot">
                         <li class="inline-block">Phone</li>
